# xdigest

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DOWNLOAD.md  LICENSE  Makefile  Makefile.inc  Makefile.win  NOTICE  README.md  configure  detect_platform.c  generate.py  rules.arch  rules.unix
.github/workflows/: arm.yml  arm.yml.disabled  build.yml  cmake.yml  make.yml  packages.yml
asm/elf/: x86_64cpuid.S  x86cpuid.S
asm/elf/sha/: sha1-armv4-large.S  sha1-armv8.S  sha256-armv4.S  sha256-armv8.S  sha256-mb-x86_64.S  sha512-ia64.S
asm/elf/sha/asm/: sha1-armv4-large.s  sha1-armv8.s  sha1-x86_64.s  sha256-armv4.s  sha256-ia64.S  sha512-armv4.S  sha512-armv4.s  sha512-armv8.S  sha512-armv8.s  sha512-ia64.S  sha512-x86_64.s
asm/linux-x86/: sha256-586.S  x86cpuid.S
asm/linux-x86-64/sha/: sha256-ia64.S  sha512-586.S  sha512-x86_64.S
asm/linux-x86/sha/: sha1-586.S
asm/win32/: x86cpuid.asm
asm/win32n/sha/: sha1-586.asm
asm/win64/: x86_64cpuid.asm
asm/win64/sha/: sha1-x86_64.asm  sha256-x86_64.S  sha512-x86_64.asm
contrib/abi/src/: install.sh  xdigest.json
contrib/archlinux/: PKGBUILD
contrib/rust/: Cargo.toml
contrib/rust/xdigest/: Cargo.toml
contrib/rust/xdigest-src/: Cargo.toml
contrib/rust/xdigest-src/src/: lib.rs
contrib/rust/xdigest-sys/: Cargo.toml  build.rs
contrib/rust/xdigest/benches/: mod.rs
contrib/rust/xdigest/src/: lib.rs
contrib/rust/xdigest/tests/: xdigest-tests.rs
contrib/vcpkg/: configure  portfile.cmake  vcpkg.json
contrib/xdigest-src/: Cargo.toml
contrib/xdigest-sys/: Cargo.toml  build.rs
include/crypto/: ctype.h  md32_common.h  sha.h
include/custom/: opensslv.h
include/internal/: common.h  e_os.h  e_os2.h  md5.h  sha.h
include/openssl/: configuration.h  e_os2.h  ebcdic.h  sha.h
include/xdigest/: md2.h  md4.h  md5.h  sha1.h  sha2.h  xdigest.h
include/xhash/: core.h  e_os2.h  ebcdic.h  md2.h  md4.h  md5.h  sha.h  sha1.h  sha2.h  version.h  xhash.h
includes/: xdigest_md4.h  xdigest_sha1.h
patches/: OPENSSL_IA32CAP_P_MAX_INDEXES.patch  armcap_ifdef.patch  ctx_size_funcs.patch  die_and_assert.patch  export_init_func.patch  fixup_armcap_win32_capability_detection.patch  include_stdlib_for_getenv.patch  inline_cleanse.patch  inline_dummy_export.patch  md2_hash_data.patch  md4_hash_data.patch  md5_h_cleanup_header.patch  md5_hash_data.patch  md5_src_cleanup_includes.patch  mem_clr_ifdef.patch  mem_clr_remove_callback.patch  remove_assert.patch  remove_getenv.patch  remove_slop_includes.patch  remove_slop_includes_headers.patch  remove_slop_includes_sources.patch  sha1_adjust_export_names.patch  sha256_adjust_export_names.patch  sha256_hash_data.patch  sha512_hash_data.patch  sha_cleanup_header.patch  sha_h_cleanup_header.patch  sha_h_undeprecate.patch  void_returning_context_operations.patch  xdig_cleanse.patch  xhash_cleanse.patch
src/: cpuid-linuxaarch64.S  cpuid.c  ebcdic.c
src/core/: arm_arch.h  armcap.c  cpuid.c  ctype.c  ebcdic.c  mem_clr.c  version.c
src/core/asm/: cpuid-linux32.S  cpuid-linuxaarch64.S
src/md2/: md2_dgst.c  md2_one.c
src/md4/: md4_dgst.c  md4_local.h  md4_one.c
src/md5/: md5_dgst.c  md5_local.h  md5_one.c
src/md5/asm/: md5-linuxaarch64.S
src/sha/: sha1.c  sha256.c  sha512.c  sha_local.h
src/sha/asm/: sha1-linux64.S  sha256-linuxaarch64.S  sha256-win32.asm  sha256-win64.asm  sha512-linuxaarch64.S
src/sha/asm/linux-x86-64/: sha256-x86_64.S
tests/: bench_base.h  example.c  sha_test.c  test_xdigest.c  test_xhash.c  time.h
tests/bench_openssl/: CMakeLists.txt  bench_openssl.c
tests/cmake_config/: CMakeLists.txt
tests/cmake_module/: CMakeLists.txt
tests/cmake_pkgconfig/: CMakeLists.txt  main.c
www/: index.html
xdigest/: Makefile  Makefile.inc
xdigest/core/: arm_arch.h  armcap.c  cpuid.c  ebcdic.c  mem_clr.c  ppccap.c  riscvcap.c  version.c
xdigest/core/asm/: cpuid-linux64.S  cpuid-linuxppc32.S  cpuid-linuxppc64.S  cpuid-macosx64.S  cpuid-macosxaarch64.S  cpuid-riscv64.S  cpuid-win32.asm  cpuid-win64.asm
xdigest/include/crypto/: md32_common.h  ppc_arch.h  riscv_arch.def  riscv_arch.h  sha.h
xdigest/include/internal/: common.h  e_os.h  e_os2.h  endian.h  md2.h  md4.h  md5.h  sha.h
xdigest/include/xdigest/: md4.h  xdigest.h  xdigest_md2.h  xdigest_md4.h  xdigest_md5.h  xdigest_sha1.h  xdigest_sha2.h
xdigest/md2/: md2_dgst.c  md2_one.c
xdigest/md4/: md4_dgst.c  md4_local.h  md4_one.c
xdigest/md5/: md5_dgst.c  md5_local.h  md5_one.c  md5_riscv.c
xdigest/md5/asm/: md5-linux32.S  md5-linux64.S  md5-linuxaarch64.S  md5-macosx32.S  md5-macosx64.S  md5-macosxaarch64.S  md5-win32.asm  md5-win64.asm  md5-zbb-riscv64.S
xdigest/sha/: sha1.c  sha256.c  sha256_local.h  sha512.c  sha512_local.h  sha_local.h  sha_riscv.c
xdigest/sha/asm/: sha1-linux32.S  sha1-linux64.S  sha1-linuxaarch64.S  sha1-linuxppc64.S  sha1-macosx32.S  sha1-macosx64.S  sha1-macosxaarch64.S  sha1-ppc32.S  sha1-win32.asm  sha1-win64.asm  sha256-linux32.S  sha256-linux64.S  sha256-linuxaarch64.S  sha256-macosx32.S  sha256-macosx64.S  sha256-macosxaarch64.S  sha256-win32.asm  sha256-win64.asm  sha256-zbb-linuxriscv64.S  sha256-zvkb-zvknha_or_zvknhb-linuxriscv64.S  sha512-linux32.S  sha512-linux64.S  sha512-linuxaarch64.S  sha512-macosx32.S  sha512-macosx64.S  sha512-macosxaarch64.S  sha512-win32.asm  sha512-win64.asm  sha512-zbb-riscv64.S  sha512-zvkb-zvknhb-linuxriscv64.S
