[package]
name = "xdigest-src"
version = "0.5.0"
license = "Apache-2.0"
repository = "https://github.com/rinrab/xdigest"
description = "Extremely fast digest algorithm implementations packaged into a lightweight library (source code)."
categories = ["algorithms", "cryptography", "no-std", "no-std::no-alloc"]
edition = "2018"
