[package]
name = "xdigest-sys"
license = "Apache-2.0"
repository = "https://github.com/rinrab/xdigest"
description = "Extremely fast digest algorithm implementations packaged into a lightweight library."
categories = ["algorithms", "cryptography", "no-std", "no-std::no-alloc"]
edition = "2018"

build = "build.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
cmake = "0.1"
bindgen = ">=0.60"
xdigest-src.workspace = true
